api signIn and jwt verify
