# models/users.go
@@ -16,10 +16,10 @@ func (User) TableName() string {
 // User 定义用户表对应的结构
 type User struct {
 	ID        uint      `json:"id" gorm:"primary_key;not null;auto_increment"`
-	UserName  string    `json:"user_name" gorm:"size:50;not null;default:''"`
 	Phone     string    `json:"phone" gorm:"type:char(11);not null;default:''"`
-	Password  string    `json:"password" gorm:"type:char(60);not null;default:''"`
 	Email     string    `json:"email" gorm:"size:50;not null;default:''"`
+	UserName  string    `json:"user_name" gorm:"size:50;not null;default:''"`
+	Password  string    `json:"password" gorm:"type:char(60);not null;default:''"`
 	Address   string    `json:"address" gorm:"size:200;not null;default:''"`
 	Gender    int8      `json:"gender" gorm:"not null;default:1"`
 	Birth     time.Time `json:"birth" gorm:"not null;type:date;default:'1970-01-01'"`
@@ -28,9 +28,9 @@ type User struct {
 	UpdatedAt time.Time `json:"updated_at" gorm:"not null;default:current_timestamp"`
 }
 
-// GetUserList 获取用户列表
-func GetUserList() (users []User, err error) {
-	if err = dbConn.Find(&users).Error; err != nil {
+// GetUserByEmail 通过邮箱获取单个用户
+func GetUserByEmail(email string) (user User, err error) {
+	if err = dbConn.Where(User{Email: email}).Find(&user).Error; err != nil {
 		return
 	}
 	return
