# routes/router.go
@@ -13,6 +13,7 @@ func SetupRouter() *gin.Engine {
 	v1 := router.Group("/v1")
 	{
 		v1.POST("/sendEmail", apiV1.SendEmail)
+		v1.POST("/signIn", apiV1.SignIn)
 		v1.POST("/signUp", apiV1.SignUp)
 		v1.Use(jwt.JWT())
 		{
