# swagger.yml
@@ -1,5 +1,16 @@
 basePath: /v1
 definitions:
+  SignInForm:
+    description: SignInForm 用户登录表单
+    properties:
+      email:
+        type: string
+        x-go-name: Email
+      password:
+        type: string
+        x-go-name: Password
+    type: object
+    x-go-package: e.coding.net/handnote/handnote/api/v1
   SignUpForm:
     description: SignUpForm 用户注册表单
     properties:
@@ -45,6 +56,21 @@ info:
   title: API.
   version: 0.0.1
 paths:
+  /signIn:
+    post:
+      description: 用户登录
+      operationId: signInRequest
+      parameters:
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/SignInForm'
+      responses:
+        "200":
+          $ref: '#/responses/signResponse'
+      schemes:
+      - http
+      - https
   /signUp:
     post:
       description: 用户注册
@@ -56,13 +82,13 @@ paths:
           $ref: '#/definitions/SignUpForm'
       responses:
         "200":
-          $ref: '#/responses/signUpResponse'
+          $ref: '#/responses/signResponse'
       schemes:
       - http
       - https
 responses:
-  signUpResponse:
-    description: SignUpResponse 用户注册响应参数
+  signResponse:
+    description: SignResponse 用户注册/登录响应参数
     schema:
       properties:
         data:
